# routes/recipes.js
@@ -58,4 +58,14 @@ router.get("/ExtendedRecipes/:recipeId", async (req, res, next) => {
   }
 });
 
+router.get('/familyRecipes', async (req,res,next)=>{
+  try {
+    const user_id = req.session.user_id; 
+    const recipe = await recipes_utils.getFamilyRecipes(user_id);
+    res.send(recipe);
+  } catch (error) {
+    next(error);
+  }
+})
+
 module.exports = router;
